--- a/index.html
+++ b/index.html
@@ -1,29 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>PetalRush Login</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="style.css">
+<title>PetalRush</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
+<script src="js/auth.js"></script>
+
+<style>
+
+body{
+font-family:Arial;
+background:#f7f7f7;
+display:flex;
+justify-content:center;
+align-items:center;
+height:100vh;
+}
+
+.card{
+background:white;
+padding:20px;
+border-radius:12px;
+width:90%;
+max-width:400px;
+}
+
+button{
+background:#ff4d8d;
+color:white;
+border:none;
+padding:12px;
+width:100%;
+margin-top:10px;
+border-radius:8px;
+}
+
+</style>
 
 </head>
 
 <body>
 
-<div class="authCard">
+<div class="card">
 
 <h2>PetalRush</h2>
 
-<input id="email" placeholder="Email">
+<input id="email" placeholder="Email" style="width:100%;padding:10px;margin-top:10px">
 
-<input id="password" type="password" placeholder="Password">
+<input id="password" type="password" placeholder="Password" style="width:100%;padding:10px;margin-top:10px">
 
-<select id="role">
+<select id="role" style="width:100%;padding:10px;margin-top:10px">
+
 <option value="buyer">Buyer</option>
 <option value="seller">Seller</option>
+
 </select>
 
 <button onclick="signup()">Signup</button>
@@ -31,8 +65,6 @@
 <button onclick="login()">Login</button>
 
 </div>
-
-<script src="app.js"></script>
 
 </body>
 </html>
