--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ margin-top:10px;
 border-radius:8px;
 }
 
-</style>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script src="js/auth.js"></script>
+
 
 </head>
 
