Full working system

--- a/buyer.html
+++ b/buyer.html
@@ -2,33 +2,25 @@
 <html>
 <head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Buyer</title>
 
-<link rel="stylesheet" href="css/buyer.css">
+<link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
 
-<div id="header">
+<header>
 
-PetalRush 🌸
+<h2 style="color:white">Buyer Dashboard</h2>
 
-</div>
+</header>
 
-<div id="content"></div>
+<h3>Flowers</h3>
 
-<div id="nav">
+<div id="flowers"></div>
 
-<button onclick="showHome()">Home</button>
-
-<button onclick="showCart()">Cart</button>
-
-<button onclick="showOrders()">Orders</button>
-
-<button onclick="showProfile()">Profile</button>
-
-</div>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script src="js/buyer.js"></script>
 
