--- a/index.html
+++ b/index.html
@@ -2,60 +2,34 @@
 <html>
 <head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>PetalRush</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<link rel="stylesheet" href="css/style.css">
 
-<script src="js/auth.js"></script>
-
-<style>
-
-body{
-font-family:Arial;
-background:#f7f7f7;
-display:flex;
-justify-content:center;
-align-items:center;
-height:100vh;
-}
-
-.card{
-background:white;
-padding:20px;
-border-radius:12px;
-width:90%;
-max-width:400px;
-}
-
-button{
-background:#ff4d8d;
-color:white;
-border:none;
-padding:12px;
-width:100%;
-margin-top:10px;
-border-radius:8px;
-}
-
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-<script src="js/auth.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 </head>
 
 <body>
 
-<div class="card">
+<header>
 
-<h2>PetalRush</h2>
+<img src="logo.png" class="logo">
 
-<input id="email" placeholder="Email" style="width:100%;padding:10px;margin-top:10px">
+</header>
 
-<input id="password" type="password" placeholder="Password" style="width:100%;padding:10px;margin-top:10px">
+<div class="auth-box">
 
-<select id="role" style="width:100%;padding:10px;margin-top:10px">
+<h2>Welcome to PetalRush 🌸</h2>
+
+<input type="email" id="email" placeholder="Email">
+
+<input type="password" id="password" placeholder="Password">
+
+<select id="role">
 
 <option value="buyer">Buyer</option>
 <option value="seller">Seller</option>
@@ -67,6 +41,8 @@ border-radius:8px;
 <button onclick="login()">Login</button>
 
 </div>
+
+<script src="js/auth.js"></script>
 
 </body>
 </html>
