--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
 <head>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>PetalRush</title>
 
 <link rel="stylesheet" href="css/style.css">
-<link rel="manifest" href="manifest.json">
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
@@ -17,39 +15,45 @@
 <body>
 
 
-<!-- SPLASH SCREEN -->
+<!-- MAIN WELCOME SCREEN -->
 
-<div id="splash" class="screen center">
-
-<img src="icon-512.png" class="app-icon">
-
-<h1 class="brand">PetalRush</h1>
-
-<p>Order Flowers Like Never Before</p>
-
-</div>
-
-
-
-<!-- WELCOME SCREEN -->
-
-<div id="welcome" class="screen center hidden">
+<div id="mainScreen" class="screen center">
 
 <img src="logo.png" class="logo">
 
-<h2>Welcome to PetalRush 🌸</h2>
+<h1 class="title">PetalRush</h1>
 
-<button onclick="openLogin()" class="btn-main">Login</button>
+<p class="tagline">Order Flowers Like Never Before</p>
 
-<button onclick="openSignup()" class="btn-outline">Create Account</button>
+<button onclick="showAuthOptions()" class="btn-main">
+Get Started
+</button>
 
 </div>
 
 
 
-<!-- LOGIN -->
+<!-- AUTH OPTIONS -->
 
-<div id="loginScreen" class="screen hidden">
+<div id="authOptions" class="screen center hidden">
+
+<h2>Welcome 🌸</h2>
+
+<button onclick="openLogin()" class="btn-main">
+Login
+</button>
+
+<button onclick="openSignup()" class="btn-outline">
+Create Account
+</button>
+
+</div>
+
+
+
+<!-- LOGIN SCREEN -->
+
+<div id="loginScreen" class="screen center hidden">
 
 <div class="card">
 
@@ -59,11 +63,17 @@
 
 <input id="loginPassword" type="password" placeholder="Password" class="input">
 
-<button onclick="login()" class="btn-main">Login</button>
+<button onclick="login()" class="btn-main">
+Login
+</button>
 
-<p onclick="openForgot()" class="link">Forgot Password?</p>
+<p onclick="openForgot()" class="link">
+Forgot Password?
+</p>
 
-<p onclick="openSignup()" class="link">Create Account</p>
+<p onclick="goBack()" class="link">
+Back
+</p>
 
 </div>
 
@@ -71,9 +81,9 @@
 
 
 
-<!-- SIGNUP -->
+<!-- SIGNUP SCREEN -->
 
-<div id="signupScreen" class="screen hidden">
+<div id="signupScreen" class="screen center hidden">
 
 <div class="card">
 
@@ -91,9 +101,13 @@
 
 </select>
 
-<button onclick="signup()" class="btn-main">Signup</button>
+<button onclick="signup()" class="btn-main">
+Signup
+</button>
 
-<p onclick="openLogin()" class="link">Already have account? Login</p>
+<p onclick="goBack()" class="link">
+Back
+</p>
 
 </div>
 
@@ -101,17 +115,19 @@
 
 
 
-<!-- FORGOT -->
+<!-- FORGOT PASSWORD -->
 
-<div id="forgotScreen" class="screen hidden">
+<div id="forgotScreen" class="screen center hidden">
 
 <div class="card">
 
 <h2>Reset Password</h2>
 
-<input id="resetEmail" placeholder="Enter Email" class="input">
+<input id="resetEmail" placeholder="Email" class="input">
 
-<button onclick="sendOTP()" class="btn-main">Send OTP</button>
+<button onclick="sendOTP()" class="btn-main">
+Send OTP
+</button>
 
 <div id="otpBox" class="hidden">
 
@@ -119,11 +135,15 @@
 
 <input id="newPassword" placeholder="New Password" class="input">
 
-<button onclick="resetPassword()" class="btn-main">Reset Password</button>
+<button onclick="resetPassword()" class="btn-main">
+Reset Password
+</button>
 
 </div>
 
-<p onclick="openLogin()" class="link">Back to Login</p>
+<p onclick="goBack()" class="link">
+Back
+</p>
 
 </div>
 
