--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
 <link rel="stylesheet" href="css/style.css">
 
+<!-- Supabase CDN -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<!-- Auth script -->
 <script src="js/auth.js"></script>
+
 
 </head>
 
