--- a/buyer.html
+++ b/buyer.html
@@ -2,25 +2,19 @@
 <html>
 <head>
 
-<title>Buyer</title>
+<title>Buyer Dashboard</title>
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/buyer.css">
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 </head>
 
 <body>
 
-<header>
+<h2>Flower Shop</h2>
 
-<h2 style="color:white">Buyer Dashboard</h2>
-
-</header>
-
-<h3>Flowers</h3>
-
-<div id="flowers"></div>
-
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<div id="products"></div>
 
 <script src="js/buyer.js"></script>
 
