--- a/seller.html
+++ b/seller.html
@@ -8,7 +8,6 @@
 
 <link rel="stylesheet" href="css/style.css">
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 </head>
 
@@ -162,7 +161,16 @@ Upload Product
 </div>
 
 
+...
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 <script src="js/seller.js"></script>
+
+</body>
+</html>
 
 
 </body>
